--- a/src/html/page_feed.html
+++ b/src/html/page_feed.html
@@ -1,214 +1,171 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Notific — Formulário de Eventos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anuncie seu Evento</title>
   <style>
-    :root{
-      --brand:#0A57D5;
-      --brand-dark:#0741A0;
-      --bg:#F5F7FB;
-      --surface:#FFFFFF;
-      --text:#1F2937;
-      --muted:#6B7280;
-      --stroke:#E5E7EB;
-      --radius-lg:16px;
-      --radius-md:12px;
-      --radius-sm:8px;
-      --shadow:0 10px 20px rgba(2,6,23,.06), 0 2px 6px rgba(2,6,23,.04);
-      --font: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-              Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
-      font-family:var(--font);
-      line-height:1.4;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f5f6fa;
+      margin: 0;
+      padding: 0;
     }
 
-    /* Header */
-    .site-header{
-      position:sticky; top:0;
-      background:var(--brand);
-      color:#fff;
-      box-shadow:0 1px 0 rgba(255,255,255,.06) inset;
-    }
-    .header-inner{
-      max-width:1100px; margin:0 auto;
-      padding:18px 20px;
-      display:flex; align-items:center; gap:28px;
-    }
-    .logo{
-      display:inline-flex; align-items:center; gap:8px;
-      font-weight:800; letter-spacing:.2px;
-      background:#fff; color:#111827;
-      padding:6px 10px; border-radius:8px;
-      box-shadow:0 2px 0 rgba(0,0,0,.06) inset;
-    }
-    .logo b{color:#2563EB}
-    nav{margin-left:auto; display:flex; gap:22px; align-items:center;}
-    nav a{
-      color:#EAF2FF; text-decoration:none; font-weight:600; font-size:14px;
-      padding:8px 12px; border-radius:999px; transition:.15s ease;
-    }
-    nav a.active, nav a:hover{ background:#fff; color:var(--brand)}
-
-    /* Page container */
-    .page{
-      max-width:1100px; margin:36px auto; padding:0 20px 64px;
-      display:grid; grid-template-columns: 1fr;
-      gap:28px;
+    /* Navbar */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #0A5EFF;
+      padding: 12px 40px;
+      color: white;
     }
 
-    /* Card */
-    .card{
-      background:var(--surface); border-radius:var(--radius-lg);
-      box-shadow:var(--shadow); border:1px solid var(--stroke);
-      padding:28px;
-      max-width:720px;
+    .navbar .logo {
+      font-weight: bold;
+      font-size: 18px;
+      background: white;
+      color: #0A5EFF;
+      padding: 6px 12px;
+      border-radius: 6px;
     }
-    .card h1{
-      margin:0 0 18px; font-size:28px; line-height:1.2; letter-spacing:.2px;
-    }
-    .subtitle{ color:var(--muted); margin-top:-6px; margin-bottom:20px; }
 
-    /* Form */
-    .form{
-      display:grid; grid-template-columns:1fr; gap:16px;
+    .navbar ul {
+      list-style: none;
+      display: flex;
+      gap: 24px;
+      margin: 0;
+      padding: 0;
     }
-    .row-2{
-      display:grid; grid-template-columns:1fr 1fr; gap:16px;
+
+    .navbar ul li {
+      cursor: pointer;
     }
-    label{
-      display:flex; flex-direction:column; gap:8px;
-      font-size:14px; font-weight:600; color:#374151;
+
+    /* Container do formulário */
+    .container {
+      max-width: 800px;
+      background: white;
+      margin: 40px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
     }
+
+    h2 {
+      margin-bottom: 10px;
+      font-size: 22px;
+      color: #222;
+    }
+
+    p {
+      color: #666;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      font-size: 14px;
+      margin-bottom: 6px;
+      color: #333;
+    }
+
     input[type="text"],
     input[type="email"],
+    input[type="date"],
     input[type="url"],
-    input[type="date"]{
-      height:44px; padding:0 14px; border-radius:var(--radius-sm);
-      border:1px solid var(--stroke); background:#fff; color:var(--text);
-      outline:none; transition:border .15s ease, box-shadow .15s ease;
-      font-size:15px;
-    }
-    input::placeholder{color:#9CA3AF}
-    input:focus{
-      border-color:var(--brand);
-      box-shadow:0 0 0 3px rgba(10,87,213,.18);
+    input[type="file"] {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 18px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
     }
 
-    /* Upload */
-    .upload {
-      display:flex; gap:12px; align-items:center; padding:12px;
-      border:1px dashed #C7D2FE; border-radius:var(--radius-md);
-      background:#F8FAFF;
+    .form-row {
+      display: flex;
+      gap: 20px;
     }
-    .upload .btn{
-      appearance:none; border:1px solid var(--stroke); background:#fff;
-      padding:10px 14px; border-radius:10px; font-weight:700;
-      cursor:pointer;
-    }
-    .upload small{ color:var(--muted)}
 
-    /* Button */
-    .actions{ margin-top:8px; display:flex; gap:12px; }
-    .btn-primary{
-      appearance:none; border:0; cursor:pointer;
-      background:var(--brand); color:#fff; font-weight:800;
-      height:48px; padding:0 18px; width:100%;
-      border-radius:14px; letter-spacing:.2px;
-      box-shadow:0 6px 14px rgba(10,87,213,.24);
-      transition:transform .06s ease, background .15s ease;
+    .form-row input {
+      flex: 1;
     }
-    .btn-primary:hover{ background:var(--brand-dark) }
-    .btn-primary:active{ transform:translateY(1px) }
 
-    /* Responsive */
-    @media (max-width:720px){
-      .row-2{ grid-template-columns:1fr }
-      .card{ padding:22px }
-      .header-inner{ gap:16px }
-      nav{ gap:12px }
+    button {
+      display: block;
+      width: 200px;
+      padding: 14px;
+      background: #0A5EFF;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin: 20px auto 0 auto;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #084cc0;
     }
   </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="header-inner">
-      <div class="logo">Notif<b>ic</b></div>
-      <nav>
-        <a href="#" class="active">Eventos</a>
-        <a href="#">Oportunidades</a>
-        <a href="#">Comunidade</a>
-        <a href="#">Contate-nos</a>
-        <a href="#">Link</a>
-      </nav>
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">Notif<span style="color:#000;">ic</span></div>
+    <ul>
+      <li>Eventos</li>
+      <li>Oportunidades</li>
+      <li>Comunidade</li>
+      <li>Contate-nos</li>
+      <li>Link</li>
+    </ul>
+  </nav>
+
+  <!-- Formulário -->
+  <div class="container">
+    <h2>Anuncie seu evento</h2>
+    <p>Preencha os dados abaixo para publicar no Notific.</p>
+
+    <label for="foto">Upload da foto do que irá anunciar</label>
+    <input type="file" id="foto" accept=".png,.jpg,.jpeg">
+
+    <label for="instituicao">Qual é a instituição que o anúncio está vinculado?</label>
+    <input type="text" id="instituicao" placeholder="Nome da instituição">
+
+    <label for="nome">Nome completo</label>
+    <input type="text" id="nome" placeholder="Seu nome">
+
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="voce@email.com">
+
+    <div class="form-row">
+      <div>
+        <label for="data-inicio">Data de início</label>
+        <input type="date" id="data-inicio">
+      </div>
+      <div>
+        <label for="data-fim">Data de término</label>
+        <input type="date" id="data-fim">
+      </div>
     </div>
-  </header>
 
-  <main class="page">
-    <section class="card">
-      <h1>Anuncie seu evento</h1>
-      <p class="subtitle">Preencha os dados abaixo para publicar no Notific.</p>
+    <div class="form-row">
+      <div>
+        <label for="local">Local</label>
+        <input type="text" id="local" placeholder="Cidade / Campus">
+      </div>
+      <div>
+        <label for="site">Link para o site oficial</label>
+        <input type="url" id="site" placeholder="https://...">
+      </div>
+    </div>
 
-      <form class="form" action="#" method="post">
-        <label>
-          Upload da foto do que irá anunciar
-          <div class="upload">
-            <button type="button" class="btn">Escolher arquivo</button>
-            <small>PNG, JPG até 5MB</small>
-          </div>
-        </label>
-
-        <label>
-          Qual é a instituição que o anúncio está vinculado?
-          <input type="text" placeholder="Nome da instituição" required />
-        </label>
-
-        <label>
-          Nome completo
-          <input type="text" placeholder="Seu nome" required />
-        </label>
-
-        <label>
-          Email
-          <input type="email" placeholder="voce@email.com" required />
-        </label>
-
-        <div class="row-2">
-          <label>
-            Data de início
-            <input type="date" required />
-          </label>
-          <label>
-            Data de término
-            <input type="date" required />
-          </label>
-        </div>
-
-        <div class="row-2">
-          <label>
-            Local
-            <input type="text" placeholder="Cidade / Campus" />
-          </label>
-          <label>
-            Link para o site oficial
-            <input type="url" placeholder="https://..." />
-          </label>
-        </div>
-
-        <div class="actions">
-          <button class="btn-primary" type="submit">Enviar Anúncio</button>
-        </div>
-      </form>
-    </section>
-  </main>
+    <button type="submit">Enviar Anúncio</button>
+  </div>
 </body>
 </html>
