commit com mudanças

--- a/perfilUsuario/paginausuario.html
+++ b/perfilUsuario/paginausuario.html
@@ -19,7 +19,7 @@
             <a href="#" class="nav-item">
                 <i class="fas fa-bell"></i>
             </a>
-            <a href="#" class="nav-item home-icon">
+            <a href="http://127.0.0.1:5500/src/html/home.html" class="nav-item home-icon">
                 <i class="fas fa-home"></i>
             </a>
         </nav>
@@ -42,17 +42,19 @@
                     </div>
                     <div class="user-info-fields">
                         <div class="info-group">
+                    <form>
                             <label for="username">Nome de usuário</label>
-                            <input type="text" id="username" value="Fulana de tal" disabled>
+                            <input type="text" name="username" placeholder="Nome"/>
                         </div>
                         <div class="info-group">
                             <label for="email">Email cadastrado</label>
-                            <input type="email" id="email" value="email.generico@gmail.com" disabled>
+                            <input type="email" email="email" placeholder="Email:"/>
                         </div>
                         <div class="info-group">
                             <label for="course">Curso</label>
-                            <input type="text" id="course" value="Ciência da Computação" disabled>
+                            <input type="text" id="course" placeholder="Curso:"/>
                         </div>
+                    </form>
                     </div>
                 </div>
             </div>
