--- a/src/html/home.html
+++ b/src/html/home.html
@@ -4,157 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>notifIC</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            color: #222;
-        }
-
-        header {
-            background: #0d8cff;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            color: #fff;
-        }
-
-        header form input {
-            padding: 8px 12px;
-            border: none;
-            border-radius: 6px;
-            width: 100%;
-            max-width: 350px;
-            font-size: 1rem;
-        }
-
-        .banner {
-            position: relative;
-            text-align: center;
-            color: #fff;
-        }
-
-        .banner img {
-            width: 100%;
-            height: 500px;
-            object-fit: cover;
-            filter: brightness(0.7);
-        }
-
-        .banner-text {
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .banner-text h1 {
-            font-size: 2.5rem;
-        }
-
-        .tabs {
-            display: flex;
-            justify-content: space-around;
-            background: #4d63ff;
-            color: #fff;
-            font-weight: bold;
-        }
-
-        .tab {
-            padding: 15px;
-            cursor: pointer;
-            flex: 1;
-            text-align: center;
-        }
-
-        .tab.active {
-            background: #303f9f;
-        }
-
-        .feed {
-            padding: 20px;
-        }
-
-        .card {
-            background: #fff;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            padding: 15px;
-            display: flex;
-            gap: 15px;
-            box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
-            position: relative;
-        }
-
-        .card img {
-            width: 80px;
-            height: 80px;
-            object-fit: contain;
-            border-radius: 8px;
-        }
-
-        .card h3 {
-            margin: 0 0 10px;
-        }
-
-        .card p {
-            margin: 0 0 10px;
-        }
-
-        .card a {
-            background: #0d8cff;
-            color: #fff;
-            padding: 8px 12px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 0.9rem;
-        }
-
-        /* Estrelinha */
-        .favorite {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 20px;
-            cursor: pointer;
-            color: #bbb;
-            transition: 0.3s;
-        }
-
-        .favorite.active {
-            color: gold;
-        }
-
-        footer {
-            background: #333;
-            color: #eee;
-            padding: 40px 20px;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 20px;
-        }
-
-        footer h4 {
-            margin-top: 0;
-        }
-
-        footer a {
-            color: #eee;
-            text-decoration: none;
-        }
-
-        @media (max-width: 768px) {
-            .card {
-                flex-direction: column;
-                align-items: center;
-            }
-            footer {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -162,7 +13,10 @@
     <form>
         <input type="text" placeholder="Digite seu número de celular...">
     </form>
-    <div>👤 Perfil</div>
+    <a href="http://127.0.0.1:5500/perfilUsuario/paginausuario.html" class="nav-item profile-icon">
+        <i class="fas fa-user"></i>
+    
+    </a>
 </header>
 
 <section class="banner">
