--- a/src/html/home.html
+++ b/src/html/home.html
@@ -295,7 +295,7 @@
 </header>
 
 <section class="banner">
-    <img src="https://i.imgur.com/w6eRgOZ.png" alt="Banner">
+    <img src="../img/banner_ic.png" alt="Banner">
     <div class="banner-text">
         <h1>./notif<span style="color: deepskyblue;">IC</span></h1>
         <p>“Todos os caminhos levam a você.”</p>
@@ -325,9 +325,9 @@
     </div>
     <div>
         <h4>Links Rápidos</h4>
-        <p><a href="#">Design</a><br>
-            <a href="#">Prototyping</a><br>
-            <a href="#">Development features</a></p>
+        <p><a href="page_feed.html">Anuncie no site</a><br>
+            <a href="#">Contate-nos</a><br>
+            <a href="#">Reportar problema</a></p>
     </div>
     <div>
         <h4>./notific</h4>
@@ -345,10 +345,10 @@
     let usuarioLogado = false;
 
     const data = [
-        {title: "SECOMP 2025", desc: "Preparem-se para a imersão tecnológica mais aguardada do ano!", img: "https://i.imgur.com/z9AQTiy.png", link:"#", tags:["geral"]},
-        {title: "NEES Inscrições 2025", desc: "Domina React, Vue ou Angular? Participe das inscrições!", img: "https://i.imgur.com/fLpxHmP.jpeg", link:"#", tags:["geral"]},
-        {title: "Vaga de Estágio - Dev Frontend", desc: "Oportunidade para alunos com conhecimento em HTML, CSS e JS.", img: "https://i.imgur.com/LNkVlpy.jpeg", link:"#", tags:["vagas"], status:"aberta", deadline: new Date(Date.now() + 86400000)},
-        {title: "Grupo de Pesquisa do Professor Ranilson", desc: "Projeto fechado para alunos de pós-graduação.", img: "https://i.imgur.com/LNkVlpy.jpeg", link:"#", tags:["vagas"], status:"fechada"}
+        {title: "SECOMP 2025", desc: "Preparem-se para a imersão tecnológica mais aguardada do ano!", img: "../img/logo_secomp.png", link:"#", tags:["geral"]},
+        {title: "NEES Inscrições 2025", desc: "Domina React, Vue ou Angular? Participe das inscrições!", img: "../img/logo_nees.jpg", link:"#", tags:["geral"]},
+        {title: "Vaga de Estágio - Dev Frontend", desc: "Oportunidade para alunos com conhecimento em HTML, CSS e JS.", img: "../img/logo_pesquisa.jpeg", link:"#", tags:["vagas"], status:"aberta", deadline: new Date(Date.now() + 86400000)},
+        {title: "Grupo de Pesquisa do Professor Ranilson", desc: "Projeto fechado para alunos de pós-graduação.", img: "../img/logo_pesquisa.jpeg", link:"#", tags:["vagas"], status:"fechada"}
     ];
 
     let favoritos = [];
@@ -505,8 +505,9 @@
     });
 
     // Inicializar
-    render("geral");
     verificarLogin();
+    render("geral");
+    
 </script>
 
 </body>
