--- a/src/html/home.html
+++ b/src/html/home.html
@@ -345,7 +345,7 @@
     let usuarioLogado = false;
 
     const data = [
-        {title: "SECOMP 2025", desc: "Preparem-se para a imersão tecnológica mais aguardada do ano!", img: "../img/logo_secomp.png", link:"#", tags:["geral"]},
+        {title: "SECOMP 2025", desc: "Preparem-se para a imersão tecnológica mais aguardada do ano!", img: "../img/logo_secomp.png", link:"page_feed.html", tags:["geral"]},
         {title: "NEES Inscrições 2025", desc: "Domina React, Vue ou Angular? Participe das inscrições!", img: "../img/logo_nees.jpg", link:"#", tags:["geral"]},
         {title: "Vaga de Estágio - Dev Frontend", desc: "Oportunidade para alunos com conhecimento em HTML, CSS e JS.", img: "../img/logo_pesquisa.jpeg", link:"#", tags:["vagas"], status:"aberta", deadline: new Date(Date.now() + 86400000)},
         {title: "Grupo de Pesquisa do Professor Ranilson", desc: "Projeto fechado para alunos de pós-graduação.", img: "../img/logo_pesquisa.jpeg", link:"#", tags:["vagas"], status:"fechada"}
