Adição de um ícone para homepage. Criação de um arquivo CSS para colocar todas as informações sobre o design da página do feed.

--- a/src/html/page_feed.html
+++ b/src/html/page_feed.html
@@ -1,129 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anuncie seu Evento</title>
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f5f6fa;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Navbar */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #0A5EFF;
-      padding: 12px 40px;
-      color: white;
-    }
-
-    .navbar .logo {
-      font-weight: bold;
-      font-size: 18px;
-      background: white;
-      color: #0A5EFF;
-      padding: 6px 12px;
-      border-radius: 6px;
-    }
-
-    .navbar ul {
-      list-style: none;
-      display: flex;
-      gap: 24px;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar ul li {
-      cursor: pointer;
-    }
-
-    /* Container do formulário */
-    .container {
-      max-width: 800px;
-      background: white;
-      margin: 40px auto;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-    }
-
-    h2 {
-      margin-bottom: 10px;
-      font-size: 22px;
-      color: #222;
-    }
-
-    p {
-      color: #666;
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      font-size: 14px;
-      margin-bottom: 6px;
-      color: #333;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="date"],
-    input[type="url"],
-    input[type="file"] {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 18px;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      font-size: 14px;
-    }
-
-    .form-row {
-      display: flex;
-      gap: 20px;
-    }
-
-    .form-row input {
-      flex: 1;
-    }
-
-    button {
-      display: block;
-      width: 200px;
-      padding: 14px;
-      background: #0A5EFF;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin: 20px auto 0 auto;
-      transition: 0.3s;
-    }
-
-    button:hover {
-      background: #084cc0;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/feed.css">
 </head>
+
 <body>
 
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo">Notif<span style="color:#000;">ic</span></div>
-    <ul>
-      <li>Eventos</li>
-      <li>Oportunidades</li>
-      <li>Comunidade</li>
-      <li>Contate-nos</li>
-      <li>Link</li>
-    </ul>
+    </a>
+    <h1>./notif<span class="logo-ic">IC</span></h1>
+    <a href="home.html">
+      <img src="../img/home_icon.png" alt="Home" class="home-icon">
+    </a>
+
   </nav>
 
   <!-- Formulário -->
@@ -168,4 +62,5 @@
     <button type="submit">Enviar Anúncio</button>
   </div>
 </body>
+
 </html>
