mudança de banner

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -39,7 +39,7 @@
         <a href="#">Início</a>
         <a href="#">Favoritos</a>
         <a href="#">Notificações</a>
-        <a href="#">Configurações</a>
+        <a href="page_feed.html">Cadastrar Notícia</a>
         <a href="#">Sair</a>
       </nav>
 
