referencia do css do login

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../css/login.css" />
     <title>Login - Notific</title>
   </head>
   <body>
     <div class="login-container">
       <div class="logo">
         <img src="notific.svg" alt="Logo Notific" class="logo-img" />
-        <p>Seu sistema de notificações eficiente</p>
+        <p>Seu sistema de notificações eficiente.</p>
       </div>
       <div class="login-form">
         <h2>Acesse sua Conta</h2>
