--- a/src/html/login.html
+++ b/src/html/login.html
@@ -9,7 +9,7 @@
   <body>
     <div class="login-container">
       <div class="logo">
-        <img src="notific.svg" alt="Logo Notific" class="logo-img" />
+        <img src="../img/notific.svg" alt="Logo Notific" class="logo-img" />
         <p>Seu sistema de notificações eficiente</p>
       </div>
       <div class="login-form">
